frontend/test/should_fail/index_exec_edge_isInFromIndexSame_index_mismatch.grg
#using "index_exec_model.gm"

sequence s(i:set<AEdge>, j:int)
{
	{ i=isInEdgesFromIndexSame(::e, j, j) }
}